# variable-taxon-mapper

./: .gitignore  AGENTS.md  README.md  check_pruned_tree.py  config.example.toml  config.mesh.toml  config.py  embedding.py  evaluate.py  infer.py  input.txt  llm_chat.py  main.py  optimize_pruning.py  predict.py  pyproject.toml  reporting.py  run_pipeline.sh  run_pipeline_lb.sh  summarize.py  taxonomy.py
doc/: 20251013_results.md  20251017_results.md  20251021_results.md  example_prompt.md  nibbler_cluster.md  pruning_strategies.md
doc/results/: 20251103_results.md  20251110_results.md  20251112_results.md  20251126_results.md
scratch/: 20251015_runs.txt  keywords_name_normalize.py  mesh_to_dataframe.py
scripts/: merge_rater_agreed.py  mesh_to_dataframe.py  sample_results.py
src/: agreement_report.py  embedding.py  error_review_cli.py  evaluate.py  graph_utils.py  infer.py  llm_chat.py  matching.py  reporting.py  snap.py  string_similarity.py  taxonomy.py  taxonomy_pruning.py  taxonomy_pruning_utils.py  utils.py
src/evaluate/: __init__.py  benchmark.py  collector.py  metrics.py  parallelism.py  prediction_pipeline.py  types.py
src/pipeline/: service.py
src/prompts/: __init__.py  renderer.py
src/pruning/: __init__.py  async_pruner.py  errors.py  tree.py  utils.py
templates/: match_system_prompt.j2  match_user_prompt.j2
tests/: test_cli_optimize.py
typing/: hnswlib.pyi
typing/openai/: __init__.pyi
typing/pyarrow/: __init__.pyi
typing/rapidfuzz/: __init__.pyi
typing/tabulate/: __init__.pyi
typing/tqdm/: __init__.pyi
vtm/: __init__.py  adjudication_cli.py  agreement_report.py  config.py  embedding.py  error_review_cli.py  graph_utils.py  llm_chat.py  matching.py  optimize_pruning.py  reporting.py  snap.py  taxonomy.py  utils.py
vtm/cli/: __init__.py  _metadata.py  _output.py  app.py  common.py  evaluate.py  optimize.py  predict.py  prune_check.py  summarize.py
vtm/evaluate/: __init__.py  benchmark.py  collector.py  metrics.py  (+3 more)
(+7 files in other folders)
