[project]
name = "variable-taxon-mapper"
version = "0.1.0"
description = "A tool for mapping variables to (ontological) trees."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy>=2.0.0",
  "hnswlib>=0.8.0",
  "ipython>=9.6.0",
  "networkx>=3.5",
  "pandas>=2.3.3",
  "pyarrow>=21.0.0",
  "openai>=1.60.0",
  "torch>=2.8.0",
  "tqdm>=4.67.1",
  "transformers>=4.57.0",
  "scikit-learn>=1.5.2",
  "scipy>=1.16.2",
  "rapidfuzz>=3.10.0",
  "tabulate>=0.9.0",
  "jinja2>=3.1.4",
  "optuna>=4.6.0",
  "typer>=0.12.5",
]

[project.scripts]
vtm = "vtm.cli:app"

[tool.uv]
package = true

[tool.setuptools.packages.find]
include = ["vtm*"]

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "pandas-stubs>=2.3.2.250926",
    "pyright>=1.1.407",
    "types-hnswlib>=0.8.0.20250227",
    "types-networkx>=3.5.0.20251106",
    "types-tabulate>=0.9.0.20241207",
    "types-tqdm>=4.67.0.20250809",
]
